force-app/main/default/objects/shc__OrgState__c/shc__OrgState__c.object-meta.xml
<CustomObject>
    <description>This object is to capture a snapshot of the org configuration state</description>
    <label>OrgState</label>
    <nameField>
        <label>Org State Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrgStates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>