force-app/main/default/objects/shc__OrgState__c/fields/shc__AccountType__c.field-meta.xml
<CustomField>
    <fullName>shc__AccountType__c</fullName>
    <description>Type of the account (Added Admin or Removed Admin)</description>
    <label>AccountType</label>
    <type>TextArea</type>
</CustomField>