force-app/main/default/objects/shc__OrgState__c/fields/shc__Is_New__c.field-meta.xml
<CustomField>
    <fullName>shc__Is_New__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is for the sending of alerts. When an event happens, it is stored with the Is_New flag set, and once it has been sent in an alert email, this flag gets unset.</description>
    <label>Is New</label>
    <type>Checkbox</type>
</CustomField>