force-app/main/default/objects/shc__OrgState__c/fields/shc__UserName__c.field-meta.xml
<CustomField>
    <fullName>shc__UserName__c</fullName>
    <label>UserName</label>
    <type>TextArea</type>
</CustomField>