force-app/main/default/objects/shc__OrgState__c/fields/shc__Value__c.field-meta.xml
<CustomField>
    <fullName>shc__Value__c</fullName>
    <label>Value</label>
    <type>TextArea</type>
</CustomField>